版本升级影响的类

--- a/gc-kafka/kafka-consumer/src/main/resources/application.properties
+++ b/gc-kafka/kafka-consumer/src/main/resources/application.properties
@@ -26,8 +26,8 @@ heartbeat.interval.ms = 8000
 #spring.kafka.listener.ack-mode=manual
 
 
-spring.redis.host=127.0.0.1
-spring.redis.port = 6379
-spring.redis.password = 12345
-spring.redis.timeout = 100000
-spring.redis.database = 1
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port = 6379
+spring.data.redis.password = 12345
+spring.data.redis.timeout = 100000
+spring.data.redis.database = 1
