--- a/gc-spider/src/main/resources/application.properties
+++ b/gc-spider/src/main/resources/application.properties
@@ -25,12 +25,12 @@ spring.servlet.multipart.max-request-size=200MB
 # 单个文件的最大值
 spring.servlet.multipart.max-file-size=200MB
 
-spring.redis.host=47.113.114.129
-spring.redis.port=20001
-spring.redis.database=15
-spring.redis.password=s4^NmlXf!%Fewg6p
-spring.redis.timeout=10s
-spring.redis.lettuce.pool.min-idle=10
-spring.redis.lettuce.pool.max-idle=20
-spring.redis.lettuce.pool.max-active=20
-spring.redis.lettuce.pool.max-wait=60000ms
+spring.data.redis.host=47.113.114.129
+spring.data.redis.port=20001
+spring.data.redis.database=15
+spring.data.redis.password=s4^NmlXf!%Fewg6p
+spring.data.redis.timeout=10s
+spring.data.redis.lettuce.pool.min-idle=10
+spring.data.redis.lettuce.pool.max-idle=20
+spring.data.redis.lettuce.pool.max-active=20
+spring.data.redis.lettuce.pool.max-wait=60000ms
