--- a/gc-java/gc-java-base/pom.xml
+++ b/gc-java/gc-java-base/pom.xml
@@ -7,6 +7,12 @@
         <groupId>com.allen</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gc-java-base</artifactId>
