--- a/gc-mybatis-tk/src/main/resources/generator.properties
+++ b/gc-mybatis-tk/src/main/resources/generator.properties
@@ -1,7 +1,7 @@
 #jdbc
 spring.datasource.url = jdbc:mysql://localhost:3306/krycai?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=GMT
 spring.datasource.username = root
-spring.datasource.password = rootroot
+spring.datasource.password = 123456
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 #spring.datasource.filters = stat,wall,log4j2
