--- a/gc-upload/src/main/resources/application.yml
+++ b/gc-upload/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/allen_upload?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
     username: root
-    password: rootroot
+    password: 123456
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
   servlet:
