--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,16 @@
         <pagehelper.version>5.3.2</pagehelper.version>
         <sharding-jdbc.version>4.1.1</sharding-jdbc.version>
         <redisson.version>3.19.0</redisson.version>
+        <mybatis-plus.version>3.5.2</mybatis-plus.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
