--- a/gc-java/gc-java-base/pom.xml
+++ b/gc-java/gc-java-base/pom.xml
@@ -12,6 +12,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
     </dependencies>
     <modelVersion>4.0.0</modelVersion>
 
